[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "docker-tree"
authors = [{name = "Raphaël Bois-Rousseau", email = "virtualdust@gmail.com"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
dependencies = ["docker"]

[project.scripts]
docker-tree = "docker_tree:_main_cli"

[project.urls]
Home = "https://github.com/vdust/docker_tree"
